[gd_scene load_steps=8 format=3 uid="uid://c6i2rd76wr75s"]

[ext_resource type="Texture2D" uid="uid://co46lpdq0lheb" path="res://sprites/Gumbo.png" id="2_y22q6"]
[ext_resource type="PackedScene" uid="uid://dk04ni7vxe63g" path="res://ptcl/explosion_animation.tscn" id="3_joui3"]
[ext_resource type="Script" uid="uid://virfkcean2ut" path="res://scripts/enemy_gumbo.gd" id="3_y22q6"]

[sub_resource type="Animation" id="Animation_y22q6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.0035, 1.0035)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(101, -497)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i2jhw"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_joui3"]
_data = {
&"RESET": SubResource("Animation_y22q6"),
&"dead": SubResource("Animation_i2jhw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2jhw"]
size = Vector2(531, 971)

[node name="Enemy_Gumbo" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 33
script = ExtResource("3_y22q6")
enemy_name = "gumbo"
metadata/_custom_type_script = "uid://cfo03mojq1dw6"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(101, -497)
scale = Vector2(1.0035, 1.0035)
texture = ExtResource("2_y22q6")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_joui3")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-153, -757, -44, -885, 49, -944, 234, -936, 283, -905, 250, -839, 264, -720, 424, -724, 381, -622, 503, -572, 402, -515, 510, -416, 445, -375, 494, -215, 509, -121, 477, -77, 392, -80, 380, -15, 225, -12, 116, -14, -101, -10, -75, -55, 18, -57, 20, -170, 63, -188, -13, -496, -13, -591, 31, -637, -76, -615, -122, -644, -144, -648)

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(246.5, -475.5)
shape = SubResource("RectangleShape2D_i2jhw")

[node name="FireOutlet" type="Marker2D" parent="."]
position = Vector2(-97, -685)

[node name="ProjectileCooldown" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(14, -429)
scale = Vector2(51.6, 55.2)

[node name="Explosion" parent="." instance=ExtResource("3_joui3")]
position = Vector2(168, -267.5)
scale = Vector2(2.744, 2.308)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ProjectileCooldown" to="." method="_on_projectile_cooldown_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="register_enemy_seen"]
